objects/SFDC_Volunteer_Event__c.object
<CustomObject>
    <fields>
        <fullName>Materials_Order_placed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Materials Order has been placed</description>
        <label>Materials Order placed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Comments_History__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Comments History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter specific notes related to this mtg record;  for Updates please include what new info. –ei. new meeting date ; new time sessions; new address details; new contact name/ph</inlineHelpText>
        <label>Meeting Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Contact_Email__c</fullName>
        <description>Email address of the meeting contact.  Not required</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Meeting_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Contact</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Stage__c</fullName>
        <description>This field shows where the meeting is in the entry process.</description>
        <inlineHelpText>Change status to SUBMITTED when all fields have been entered and the meeting is ready for validation and submission to the OE Coordinator.</inlineHelpText>
        <label>Meeting Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                    <default>true</default>
                    <label>DRAFT</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>SUBMITTED</fullName>
                </value>
                <value>
                    <fullName>Submitted - Rush</fullName>
                </value>
                <value>
                    <fullName>UPDATED</fullName>
                </value>
                <value>
                    <fullName>Updated - Rush</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_State__c</fullName>
        <label>Meeting State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Status__c</fullName>
        <inlineHelpText>(LG06232014)Field is updated by workflows please do not change.</inlineHelpText>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>COMPLETED-CANCELLED</fullName>
                </value>
                <value>
                    <fullName>NEW REQUEST</fullName>
                    <default>true</default>
                    <label>NEW REQUEST</label>
                </value>
                <value>
                    <fullName>IN REVIEW</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS – FACILITATOR BEING RECRUITED</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS - FACILITATOR SECURED AND WAITING ON FEEDBACK</fullName>
                </value>
                <value>
                    <fullName>COMPLETED - FACILITATOR SECURED &amp;MEETING FEEDBACK RECEIVED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED - MATERIALS DELIVERED</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS – ORDER ON STANDBY</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS- ORDER PLACED</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS – FACILITATOR BEING RECRUITED &amp; ORDER on STANDBY</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS -FACILITATOR SECURED  &amp; WAITING ON FEEDBACK &amp; ORDER ON STANDBY</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS- FACILITATOR SECURED &amp; WAITING ON FEEDBACK &amp; ORDER PLACED</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS -FACILITATOR BEING RECRUITED &amp; ORDER PLACED</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS- FACILITATOR SECURED &amp; MATERIALS DELIVERED &amp; WAITING ON FEEDBACK</fullName>
                </value>
                <value>
                    <fullName>COMPLETED - FACILITATOR SECURED &amp; MATERIALS DELIVERED &amp; MEETING FEEDBACK RECEIVED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED - UNABLE TO SECURE FACILITATOR &amp; MATERIALS DELIVERED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED - UNABLE TO SECURE FACILITATOR</fullName>
                </value>
                <value>
                    <fullName>COMPLETED- FACILITATOR SECURED AND FEEDBACK NOT RECEIVED WITHIN 14 DAYS</fullName>
                </value>
                <value>
                    <fullName>Completed Cancelled - Override</fullName>
                </value>
                <value>
                    <fullName>OE KIT REQUEST ONLY</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS -UNABLE TO SECURE FACILITATOR - ORDER PLACED</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS - UNABLE TO SECURE FACILITATOR - ORDER ON STANDBY</fullName>
                </value>
                <value>
                    <fullName>COMPLETED- FACILITATOR SECURED &amp; MATERIALS DELIVERED &amp; FEEDBACK NOT RECEIVED WITHIN 14 DAYS</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS - FACILITATOR SECURED &amp;  ORDER PLACED &amp; WAITING ON FEEDBACK</fullName>
                </value>
                <value>
                    <fullName>IN PROCESS -FACILITATOR BEING RECRUITED &amp; MATERIALS DELIVERED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Fair</fullName>
                </value>
                <value>
                    <fullName>Conference Call</fullName>
                </value>
                <value>
                    <fullName>Health Fair</fullName>
                </value>
                <value>
                    <fullName>PowerPoint w/ VO  {PP with VO}</fullName>
                    <label>PowerPoint with Voiceover</label>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Q &amp; A</fullName>
                </value>
                <value>
                    <fullName>Supplies Only</fullName>
                </value>
                <value>
                    <fullName>Virtual (Webinar)</fullName>
                </value>
                <value>
                    <fullName>OE Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Facilitator_Required_Count__c</fullName>
        <formula>IF(OR(AND(ISPICKVAL(Recruitment_of_Facilitator_Needed__c, &apos;No&apos;), Date__c &gt; TODAY(),ISPICKVAL(AE_Attending_Picklist__c , &apos;No&apos;),ISPICKVAL(AM_Attending_Picklist__c , &apos;No&apos;),ISPICKVAL(SAR_Attending__c, &apos;No&apos;),ISPICKVAL(Other_Associate_Attending__c, &apos;No&apos;) ,ISBLANK(Facilitator_1_Type__c) , ISBLANK(Facilitator_two_Type__c) , ISBLANK( Facilitator_three_Type__c)), AND(Date__c &lt;= TODAY(), ISPICKVAL(AE_Attending_Picklist__c , &apos;No&apos;),ISPICKVAL(AM_Attending_Picklist__c , &apos;No&apos;),ISPICKVAL(SAR_Attending__c, &apos;No&apos;),ISPICKVAL(Other_Associate_Attending__c, &apos;No&apos;), ISBLANK(Facilitator_1_Type__c) , ISBLANK(Facilitator_two_Type__c) , ISBLANK( Facilitator_three_Type__c),  NOT Unable_to_secure_facilitator__c ))


 ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Facilitator Required Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OE_Consultant_Lead_Email__c</fullName>
        <formula>OE_Consultant_Lead__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Consultant Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Consultant_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If any Facilitator is a Consultant , enter the name of the OE Consultant Lead.</inlineHelpText>
        <label>OE Consultant Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Facilitator_Type__c</field>
                <operation>equals</operation>
                <value>OE Coordinator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Enrollment (OE Consultant Lead)</relationshipLabel>
        <relationshipName>Open_Enrollment5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OE_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to a list of Consultants on the Facilitators Account</description>
        <inlineHelpText>Search will only provide names that have been entered as a Consultants on the Facilitators account in Salesforce.</inlineHelpText>
        <label>OE Consultant</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Open Enrollment</value>
            </filterItems>
            <filterItems>
                <field>Contact.Facilitator_Type__c</field>
                <operation>equals</operation>
                <value>Contractor</value>
            </filterItems>
            <infoMessage>This list is filtered to only show a list of Consultants on the Facilitator Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Enrollment (OE Consultant)</relationshipLabel>
        <relationshipName>Open_Enrollment4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OE_Coordinator_Action__c</fullName>
        <description>This field is used by OE manager to coordinate Consultants across the country</description>
        <label>OE Coordinator Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assign</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Rescinded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_Coordinator_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OE Coordinator Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OE_Coordinator_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup for the OE Coordinator so that email alerts can be sent when meetings are submitted or changed</description>
        <inlineHelpText>Please select your Open Enrollment Coordinator - For Central and South West - Colleen Douma, For North East - Colleen Jacobs, For West - Bethany Snee.</inlineHelpText>
        <label>OE Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Facilitator_Type__c</field>
                <operation>equals</operation>
                <value>OE Coordinator</value>
            </filterItems>
            <infoMessage>This field will be populated after save</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Enrollment (OE Coordinator)</relationshipLabel>
        <relationshipName>Open_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OE_Coordinator_Name_Text__c</fullName>
        <formula>OE_Coordinator_Contact__r.FirstName+&quot; &quot;+ OE_Coordinator_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Coordinator Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Coordinator_Phone__c</fullName>
        <formula>OE_Grouping__r.OE_Coordinator_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Coordinator Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Coordinator_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OE Coordinator Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Grouping__c</fullName>
        <description>The parent link.</description>
        <inlineHelpText>This link will take you back to the Group Meeting record.</inlineHelpText>
        <label>Meetings Grouping</label>
        <referenceTo>Open_Enrollment_Meetings__c</referenceTo>
        <relationshipLabel>Open Enrollment</relationshipLabel>
        <relationshipName>Open_Enrollment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OE_Kit_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OE Kit Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OE_Kit_Escalated_Request__c</fullName>
        <label>OE Kit Escalated Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_Kit_Request_Stage__c</fullName>
        <label>OE Kit Request Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Pending Additional Info</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Request Assigned</fullName>
                </value>
                <value>
                    <fullName>Pending OE Kit Approval</fullName>
                </value>
                <value>
                    <fullName>OE Kit Approved</fullName>
                </value>
                <value>
                    <fullName>Materials Ordered</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_Kit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OE Kit</label>
        <referenceTo>Open_Enrollment_Meetings__c</referenceTo>
        <relationshipLabel>OE Kits</relationshipLabel>
        <relationshipName>OEKits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Omit_Event_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked if a meeting reminder is not supposed to be sent.  A workflow will utilize this field.</description>
        <label>Omit Event Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Omit_Feedback_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked the feedback reminder will not be sent.  A workflow uses this field.</description>
        <label>Omit Feedback Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Meeting_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Enrollment Meeting ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Enrollment</label>
        <referenceTo>Open_Enrollment_Meetings__c</referenceTo>
        <relationshipLabel>Open Enrollment</relationshipLabel>
        <relationshipName>Open_Enrollment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Associate_Attending__c</fullName>
        <description>Use when an associate other than the AE or AM has been recruited to attend the meeting.</description>
        <inlineHelpText>Select Yes when an associate other than the AE or AM has been recruited to attend the meeting.</inlineHelpText>
        <label>Other Associate Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Associate_Count__c</fullName>
        <formula>IF(AND(TEXT(Other_Associate_Attending__c) = &apos;Yes&apos;, ISBLANK( TEXT(Facilitator1__r.Facilitator_Type__c) )), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Associate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority__c</description>
        <formula>OE_Grouping__r.Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Picklist__c</fullName>
        <label>Product Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Open Access POS</fullName>
                </value>
                <value>
                    <fullName>Blue Open Access HRA</fullName>
                </value>
                <value>
                    <fullName>Blue Choice PPO</fullName>
                </value>
                <value>
                    <fullName>Blue Essential Open Access POS</fullName>
                </value>
                <value>
                    <fullName>Dental Complete</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Commercial ActWise</fullName>
                </value>
                <value>
                    <fullName>Life Product</fullName>
                </value>
                <value>
                    <fullName>Disability Product</fullName>
                </value>
                <value>
                    <fullName>Medical Supplemental Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty_of_Kits_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Qty of Kits Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RUSH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Changes done under user story: PRDCRM - 27697</description>
        <inlineHelpText>Meeting Date less than or equal to 14 days from today</inlineHelpText>
        <label>RUSH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Update__c</fullName>
        <inlineHelpText>Select a reason for the change to assist the OE Coordinator.</inlineHelpText>
        <label>Reason for Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting cancelled</fullName>
                </value>
                <value>
                    <fullName>Date Change</fullName>
                </value>
                <value>
                    <fullName>Session times change</fullName>
                </value>
                <value>
                    <fullName>Meeting address change</fullName>
                </value>
                <value>
                    <fullName>Delivery address change</fullName>
                </value>
                <value>
                    <fullName>Site contact name/ph# change</fullName>
                </value>
                <value>
                    <fullName>Facilitator Update</fullName>
                </value>
                <value>
                    <fullName>Materials Change</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>OE Kit Approved</fullName>
                </value>
                <value>
                    <fullName>OE Kit Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruit_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruit Consultant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruitment_of_Facilitator_Needed__c</fullName>
        <description>AM checks this if they will not be attending or if they don&apos;t already have a facilitator lined up.</description>
        <inlineHelpText>If Yes Open Enrollment Team will seek coverage.</inlineHelpText>
        <label>Facilitator Needs to be Recruited</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Carpet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special Red Carpet meeting</description>
        <label>Wellness Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Submitted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_is_From__c</fullName>
        <formula>IF(INCLUDES( OE_Grouping__r.Request_is_from__c, &quot;Commercial Medical&quot;), &quot;Commercial Medical&quot;, NULL) + BR() + 
IF(INCLUDES( OE_Grouping__r.Request_is_from__c, &quot;Group Retiree Solutions&quot;), &quot;Group Retiree Solutions&quot;, NULL) + BR() + 
IF(INCLUDES( OE_Grouping__r.Request_is_from__c, &quot;Voluntary Specialty&quot;), &quot;Voluntary Specialty&quot;, NULL) + BR() + 
IF(INCLUDES( OE_Grouping__r.Request_is_from__c, &quot;Specialty Only&quot;), &quot;Specialty Only&quot;, NULL) + BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request is From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_needed_by__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request needed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAR_AcctMgt_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAR - AcctMgt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAR_AcctMgt__c</fullName>
        <formula>OE_Grouping__r.Account__r.SARAcctMgmt__r.FirstName + &apos; &apos; + OE_Grouping__r.Account__r.SARAcctMgmt__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAR - AcctMgt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAR_Attending__c</fullName>
        <description>For California only.  Indicates if SAR is attending</description>
        <label>SAR Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAR_Count__c</fullName>
        <description>Counts the number of facilitaors who are SARS</description>
        <formula>if (OR(TEXT(SAR_Attending__c) =&apos;Yes&apos;,  Facilitator_1_Type__c = &apos;SAR&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAR Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAR_Phone__c</fullName>
        <formula>OE_Grouping__r.Account__r.SARAcctMgmt__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAR Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAR_String__c</fullName>
        <formula>&apos;UserId=&apos; + OE_Grouping__r.Account__r.SARAcctMgmt__r.Id + 
&apos;&amp;meetingID=&apos; + CASESAFEID(Id) + 
&apos;&amp;email=&apos; + OE_Grouping__r.Account__r.SARAcctMgmt__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAR String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_OE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy OE ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Facilitator_1_Calendar_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Facilitator 1 Calendar Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Facilitator_2_Calendar_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Facilitator 2 Calendar Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Facilitator_3_Calendar_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Facilitator 3 Calendar Invite</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>